OPA_gatekeeper/nist_frameworks/constraint-nist-no-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPRunAsNonRoot
metadata:
  name: nist-least-privilege
spec:
  match:
    kinds:
      - kinds: ["Pod"]
