OPA_gatekeeper/nist_frameworks/template-nist-no-root.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsprunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sPSPRunAsNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsprunasnonroot
        violation[{"msg": msg}] {
          # Check if runAsNonRoot is not set to true
          not input.review.object.spec.securityContext.runAsNonRoot
          msg := "NIST Violation: Containers must be required to run as a non-root user (AC-6)."
        }
