OPA_gatekeeper/nist_frameworks/template-restricted-security.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsprestricthostnamespaces
spec:
  crd:
    spec:
      names:
        kind: K8sPSPRestrictHostNamespaces
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsprestricthostnamespaces
        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork
          msg := "NIST Violation: Host network sharing is not allowed."
        }
